--- a/IDLE-DUNGEON/Makefile
+++ b/IDLE-DUNGEON/Makefile
@@ -4,10 +4,12 @@ INCLUDEDIR = ./include
 APPDIR = ./application
 OBJDIR = ./build
 TESTDIR = ./test
+LIBDIR = ./lib
 
 CC = g++
 CFLAGS = -Wall -pedantic -std=c++11 -I $(INCLUDEDIR)
 LDFLAGS =
+ARCHIVE = ar
 
 BIN = ${BINDIR}/main
 APP = ${APPDIR}/main.cpp
@@ -28,19 +30,47 @@ $(APPOBJ): $(APP)
 ${OBJDIR}/%.o: $(SRCDIR)/%.cpp
 	$(CC) -c -o $@ $< $(CFLAGS)
 
+minhalib.a: $(SRCDIR)/character.cpp $(SRCDIR)/func.cpp $(SRCDIR)/equips.cpp $(SRCDIR)/monster.cpp $(SRCDIR)/thief.cpp $(SRCDIR)/warlock.cpp $(SRCDIR)/warrior.cpp $(INCLUDEDIR)/character.h $(INCLUDEDIR)/func.h $(INCLUDEDIR)/equips.h $(INCLUDEDIR)/monster.h $(INCLUDEDIR)/thief.h $(INCLUDEDIR)/warlock.h $(INCLUDEDIR)/warrior.h
+	$(CC) $(CFLAGS) -c $(SRCDIR)/character.cpp -o $(OBJDIR)/character.o
+	$(CC) $(CFLAGS) -c $(SRCDIR)/func.cpp -o $(OBJDIR)/func.o
+	$(CC) $(CFLAGS) -c $(SRCDIR)/equips.cpp -o $(OBJDIR)/equips.o
+	$(CC) $(CFLAGS) -c $(SRCDIR)/monster.cpp -o $(OBJDIR)/monster.o
+	$(CC) $(CFLAGS) -c $(SRCDIR)/thief.cpp -o $(OBJDIR)/thief.o
+	$(CC) $(CFLAGS) -c $(SRCDIR)/warlock.cpp -o $(OBJDIR)/warlock.o
+	$(CC) $(CFLAGS) -c $(SRCDIR)/warrior.cpp -o $(OBJDIR)/warrior.o
+	$(ARCHIVE) rcs $(LIBDIR)/$@ $(OBJDIR)/character.o $(OBJDIR)/func.o $(OBJDIR)/equips.o $(OBJDIR)/monster.o $(OBJDIR)/thief.o $(OBJDIR)/warlock.o $(OBJDIR)/warrior.o
+	@echo "Biblioteca estática criada em $(LIBDIR)/$@"
+
+prog_estatico:
+	$(CC) $(CFLAGS) $(APPDIR)/main.cpp $(LIBDIR)/minhalib.a -o $(OBJDIR)/$@
+
+minhalib.so: $(SRCDIR)/character.cpp $(SRCDIR)/func.cpp $(SRCDIR)/equips.cpp $(SRCDIR)/monster.cpp $(SRCDIR)/thief.cpp $(SRCDIR)/warlock.cpp $(SRCDIR)/warrior.cpp $(INCLUDEDIR)/character.h $(INCLUDEDIR)/func.h $(INCLUDEDIR)/equips.h $(INCLUDEDIR)/monster.h $(INCLUDEDIR)/thief.h $(INCLUDEDIR)/warlock.h $(INCLUDEDIR)/warrior.h
+	$(CC) $(CFLAGS) -fPIC -c $(SRCDIR)/character.cpp -o $(OBJDIR)/character.o
+	$(CC) $(CFLAGS) -fPIC -c $(SRCDIR)/func.cpp -o $(OBJDIR)/func.o
+	$(CC) $(CFLAGS) -fPIC -c $(SRCDIR)/equips.cpp -o $(OBJDIR)/equips.o
+	$(CC) $(CFLAGS) -fPIC -c $(SRCDIR)/monster.cpp -o $(OBJDIR)/monster.o
+	$(CC) $(CFLAGS) -fPIC -c $(SRCDIR)/thief.cpp -o $(OBJDIR)/thief.o
+	$(CC) $(CFLAGS) -fPIC -c $(SRCDIR)/warlock.cpp -o $(OBJDIR)/warlock.o
+	$(CC) $(CFLAGS) -fPIC -c $(SRCDIR)/warrior.cpp -o $(OBJDIR)/warrior.o
+	$(CC) -shared -fPIC -o $(LIBDIR)/$@ $(OBJDIR)/character.o $(OBJDIR)/func.o $(OBJDIR)/equips.o $(OBJDIR)/monster.o $(OBJDIR)/thief.o $(OBJDIR)/warlock.o $(OBJDIR)/warrior.o
+	@echo "Biblioteca dinâmica criada em $(LIBDIR)/$@"
+
+prog_dinamico:
+	$(CC) $(CFLAGS) $(APPDIR)/main.cpp $(LIBDIR)/minhalib.so -o $(OBJDIR)/$@
+
 test: $(TESTS) 
 	$(info ************  Testes concluídos com sucesso! ************)
 
 $(TESTDIR)/t_%: $(TESTDIR)/t_%.cpp $(OBJS)
 	$(CC) -o $@ $< $(OBJS) $(CFLAGS) $(LDFLAGS)
 	$@
-run: 
+run:
 	$(BINDIR)/main
 all:
 	make
 	$(BINDIR)/main
 clean:
-	rm -f $(BINDIR)/* $(OBJDIR)/* $(APPOBJ)/*
+	rm -f $(BINDIR)/* $(OBJDIR)/* $(APPOBJ)/* $(LIBDIR)/*
 	rm -f $(TESTDIR)/*
 re:
 	make clean
