Melhora e utilização da biblioteca no projeto

--- a/IDLE-DUNGEON/Makefile
+++ b/IDLE-DUNGEON/Makefile
@@ -8,7 +8,6 @@ LIBDIR = ./lib
 
 CC = g++
 CFLAGS = -Wall -pedantic -std=c++11 -I $(INCLUDEDIR)
-LDFLAGS =
 ARCHIVE = ar
 
 BIN = ${BINDIR}/main
@@ -18,9 +17,6 @@ SRC = $(wildcard $(SRCDIR)/*.cpp)
 OBJS = $(patsubst $(SRCDIR)/%.cpp,$(OBJDIR)/%.o,$(SRC))
 APPOBJ = $(patsubst $(APPDIR)/%.cpp,$(OBJDIR)/%.o,$(APP))
 
-_TESTS = $(wildcard $(TESTDIR)/*.cpp)
-TESTS = $(patsubst %.cpp,%,$(_TESTS))
-
 $(BIN): $(OBJS) $(APPOBJ)
 	$(CC) -o $(BIN) $(APPOBJ) $(OBJS) $(CFLAGS) $(LDFLAGS)
 
@@ -29,20 +25,6 @@ $(APPOBJ): $(APP)
 
 ${OBJDIR}/%.o: $(SRCDIR)/%.cpp
 	$(CC) -c -o $@ $< $(CFLAGS)
-
-minhalib.a: $(SRCDIR)/character.cpp $(SRCDIR)/func.cpp $(SRCDIR)/equips.cpp $(SRCDIR)/monster.cpp $(SRCDIR)/thief.cpp $(SRCDIR)/warlock.cpp $(SRCDIR)/warrior.cpp $(INCLUDEDIR)/character.h $(INCLUDEDIR)/func.h $(INCLUDEDIR)/equips.h $(INCLUDEDIR)/monster.h $(INCLUDEDIR)/thief.h $(INCLUDEDIR)/warlock.h $(INCLUDEDIR)/warrior.h
-	$(CC) $(CFLAGS) -c $(SRCDIR)/character.cpp -o $(OBJDIR)/character.o
-	$(CC) $(CFLAGS) -c $(SRCDIR)/func.cpp -o $(OBJDIR)/func.o
-	$(CC) $(CFLAGS) -c $(SRCDIR)/equips.cpp -o $(OBJDIR)/equips.o
-	$(CC) $(CFLAGS) -c $(SRCDIR)/monster.cpp -o $(OBJDIR)/monster.o
-	$(CC) $(CFLAGS) -c $(SRCDIR)/thief.cpp -o $(OBJDIR)/thief.o
-	$(CC) $(CFLAGS) -c $(SRCDIR)/warlock.cpp -o $(OBJDIR)/warlock.o
-	$(CC) $(CFLAGS) -c $(SRCDIR)/warrior.cpp -o $(OBJDIR)/warrior.o
-	$(ARCHIVE) rcs $(LIBDIR)/$@ $(OBJDIR)/character.o $(OBJDIR)/func.o $(OBJDIR)/equips.o $(OBJDIR)/monster.o $(OBJDIR)/thief.o $(OBJDIR)/warlock.o $(OBJDIR)/warrior.o
-	@echo "Biblioteca estática criada em $(LIBDIR)/$@"
-
-prog_estatico:
-	$(CC) $(CFLAGS) $(APPDIR)/main.cpp $(LIBDIR)/minhalib.a -o $(OBJDIR)/$@
 
 minhalib.so: $(SRCDIR)/character.cpp $(SRCDIR)/func.cpp $(SRCDIR)/equips.cpp $(SRCDIR)/monster.cpp $(SRCDIR)/thief.cpp $(SRCDIR)/warlock.cpp $(SRCDIR)/warrior.cpp $(INCLUDEDIR)/character.h $(INCLUDEDIR)/func.h $(INCLUDEDIR)/equips.h $(INCLUDEDIR)/monster.h $(INCLUDEDIR)/thief.h $(INCLUDEDIR)/warlock.h $(INCLUDEDIR)/warrior.h
 	$(CC) $(CFLAGS) -fPIC -c $(SRCDIR)/character.cpp -o $(OBJDIR)/character.o
@@ -56,21 +38,16 @@ minhalib.so: $(SRCDIR)/character.cpp $(SRCDIR)/func.cpp $(SRCDIR)/equips.cpp $(S
 	@echo "Biblioteca dinâmica criada em $(LIBDIR)/$@"
 
 prog_dinamico:
-	$(CC) $(CFLAGS) $(APPDIR)/main.cpp $(LIBDIR)/minhalib.so -o $(OBJDIR)/$@
+	$(CC) $(CFLAGS) $(APPDIR)/main.cpp $(LIBDIR)/minhalib.so -o $(BINDIR)/$@
 
-test: $(TESTS) 
-	$(info ************  Testes concluídos com sucesso! ************)
-
-$(TESTDIR)/t_%: $(TESTDIR)/t_%.cpp $(OBJS)
-	$(CC) -o $@ $< $(OBJS) $(CFLAGS) $(LDFLAGS)
-	$@
 run:
-	$(BINDIR)/main
+	$(BINDIR)/prog_dinamico
 all:
-	make
-	$(BINDIR)/main
+	make minhalib.so
+	make prog_dinamico 
+	make run
 clean:
-	rm -f $(BINDIR)/* $(OBJDIR)/* $(APPOBJ)/* $(LIBDIR)/*
+	rm -f $(BINDIR)/* $(OBJDIR)/* $(APPOBJ)/*
 	rm -f $(TESTDIR)/*
 re:
 	make clean
